# odoo-analyse

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  patch.diff  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  publish.yaml
src/odoo_analyse/: __init__.py  __main__.py  field.py  function.py  js_module.py  main.py  model.py  module.py  odoo.py  record.py  utils.py  view.py
tests/: test_module.py  test_odoo.py  test_utils.py
tests/testing_module/: README.md  __init__.py  __manifest__.py
tests/testing_module/controllers/: main.py
tests/testing_module/models/: __init__.py  test_models.py
tests/testing_module/security/: ir.model.access.csv
tests/testing_module/views/: test_model_views.xml
