[metadata]
name = odoo-analyse
version = attr: odoo_analyse.VERSION
author = initOS GmbH
author_email = info@initos.com
description = Package to analyse odoo modules
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0
keywords = odoo modules analyze dependency graph
url = https://github.com/initOS/odoo-analyse
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
  Topic :: Software Development
project_urls =
  Documentation = https://github.com/initOS/odoo-analyse/blob/master/README.md
  Usage = https://odoo-code-search.com

[options]
include_package_data = True
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires =
  2to3
  cloc
  lxml
  mccabe

[options.extras_require]
graph =
  graphviz
  psycopg2

[options.entry_points]
console_scripts =
    odoo_analyse = odoo_analyse.__main__:main

[options.packages.find]
where = src
